# rocketSimulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  audio.hpp  main.cpp  physiques.txt  vcpkg.json
resources/: 321_ignition.m4a  rocket.mtl  rocket_sound.m4a
